<resources>
    <string name="app_name">NetWorks</string>
    <string name="description">NetWorks is a simple RSA key pair generating app.</string>
    <string name="settings">Settings</string>
    <string name="settingsDescription">Modify your settings here.</string>
    <string name="bits">Bits: %1$s</string>
    <string name="output">Output</string>
    <string name="generate">Generate</string>
    <string name="generateNew">New</string>
    <string name="encrypt">Encrypt</string>
    <string name="decrypt">Decrypt</string>
    <string name="publickey">Public Key</string>
    <string name="privatekey">Private Key</string>
    <string name="displayPublic">Public</string>
    <string name="displayPrivate">Private</string>
    <string name="save">Save</string>
    <string name="showencrypt">Encrypt</string>
    <string name="showdecrypt">Decrypt</string>
</resources>
